--- a/front/footer.html
+++ b/front/footer.html
@@ -26,7 +26,7 @@
     </div>
     <div class="col-sm-6 col-sm-offset-3">
         <p>Copyright &copy; 2016 <a href="http://www.sysu.edu.cn/2012/cn/index.htm">中山大学</a> &nbsp&nbsp&nbsp
-            联系我sss们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p>
+            联系我们：<a href="mailto:wuzhd@mail2.sysu.edu.cn">wuzhd@mail2.sysu.edu.cn</a></p>
         <p>地址：中国广州市中山二路74号中山大学北校区（邮政编码：510080）</p>
     </div>
 </footer>
