--- a/front/header.html
+++ b/front/header.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal" id='newer'>注册新用户</button>
+              <button type="button" class="btn btn-primary newer" data-dismiss="modal" id='newer'>注册新用户</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                 <button type="button" class="btn btn-primary" id='loginBtn' data-dismiss="modal">登录</button>
               
@@ -78,6 +78,7 @@
     <div class=" btn btn-primary btn-sm login-btn" data-toggle="modal" data-target="#myModal">登录</div>
     {{else}}
     <a href="./user.html">您好！欢迎回来</a>
+    <a id='logout'>登出</a>
     {{/if}}
 </script>
 
@@ -103,23 +104,4 @@
 </script>
 
 
-<script id="loginTpl" type="text/html">
-    <div class="modal-body" id='newPlayer'>
-        <div class="input-group">
-            <span class="input-group-addon">姓名</span>
-            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}>
-        </div>
-        <div class="input-group">
-            <span class="input-group-addon">帐号</span>
-            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}}>
-        </div>
-        <div class="input-group">
-            <span class="input-group-addon">密码</span>
-            <input type="password" class="form-control" placeholder="请输入密码" name='password'>
-        </div>
-          <div class="input-group">
-            <span class="input-group-addon">确认密码</span>
-            <input type="password" class="form-control" placeholder="请输入密码" name='agaipassword'>
-        </div>
-    </div>
-</script>
+
