--- a/front/back.html
+++ b/front/back.html
@@ -107,7 +107,7 @@
                 <input type="text" class="form-control" placeholder="相关文章链接" name='relatedArticleLinks'  value={{relatedArticleLinks}}>
               </div>
               <div class="input-group">
-                <span class="input-group-addon">详细内容</span>
+                <span class="input-group-addon">项目简介</span>
                 <input type="text" class="form-control" placeholder="详细内容" name='content'  value={{content}}>
               </div>
             </div>
