--- a/front/teams.html
+++ b/front/teams.html
@@ -23,7 +23,8 @@
                     <div class="col-sm-11 col-sm-offset-1">
                         <div class="panel panel-success">
                             <div class="panel-heading">
-                                <h3 class="panel-title">项目进展</h3>
+
+                                <h3 class="panel-title">项目团队 <a href="./back.html" class="label label-primary toEdit">管理</a></h3>
                             </div>
                             <div class="panel-body">
                                 <ul class="project-panel-ul">
@@ -102,7 +103,7 @@
                             <a href="#" class="normal-a-link">查看更多</a>
                         </li>
                     </ul>
-                    <a href="#" class="normal-a-link">查看更多</a>
+                     <p class="normal-p"><a href="#" class="normal-a-link">查看更多</a></p>
                 </div>
             </div>
         </div>
