--- a/front/essay.html
+++ b/front/essay.html
@@ -23,7 +23,7 @@
         <div class="col-sm-12   project-introduction">
             <div class="panel ">
                 <div class="panel-heading">
-                    <h3 class="panel-title">发表文章</h3>
+                    <h3 class="panel-title">发表文章 <a href="./back.html" class="label label-primary toEdit">管理</a></h3>
                 </div>
                 <div class="panel-body">
                     <h3 class="essay-years">
