--- a/front/user.html
+++ b/front/user.html
@@ -57,7 +57,7 @@
                     <td>{{item.account}}</td>
                     <td>{{item.username}}</td>
                     <td>{{item.userId}}</td>
-                    <td>{{item.type}}</td>
+                    <td>{{item.level}}</td>
                     <td><a onclick=editUser({{item.userId}})>编辑</a>  <a onclick=deleteUser({{item.userId}})>删除</a></td>
                 </tr>
             {{/each}}
@@ -70,7 +70,7 @@
         <div class="modal-body" id='newPlayer'>
             <div class="input-group">
                 <span class="input-group-addon">姓名</span>
-                <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}>
+                <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}} >
             </div>
             <div class="input-group">
                 <span class="input-group-addon">帐号</span>
@@ -79,6 +79,15 @@
             <div class="input-group">
                 <span class="input-group-addon">密码</span>
                 <input type="password" class="form-control" placeholder="请输入密码" name='password'>
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">权限</span>
+                <select class="type-select">
+                    <option value="0">普通用户</option>
+                    <option value="1">管理员</option>
+                    <option value="2">超级管理员</option>
+                    <option value="3">实验室模块</option>
+                </select>
             </div>
               <div class="input-group">
                 <span class="input-group-addon">确认密码</span>
