--- a/re/essay.html
+++ b/re/essay.html
@@ -101,18 +101,45 @@
 
 <script id="signInTpl" type="text/html">
     <div class="modal-body" id='newPlayer'>
+        {{if list!=''}}
         <div class="input-group">
             <span class="input-group-addon">姓名</span>
-            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}>
+            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}  >
         </div>
         <div class="input-group">
             <span class="input-group-addon">帐号</span>
-            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}}>
+            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}}  >
         </div>
         <div class="input-group">
             <span class="input-group-addon">密码</span>
             <input type="password" class="form-control" placeholder="请输入密码" name='password'>
         </div>
+        {{else}}
+         <div class="input-group">
+            <span class="input-group-addon">姓名</span>
+            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}} disabled>
+        </div>
+        <div class="input-group">
+            <span class="input-group-addon">帐号</span>
+            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}} disabled>
+        </div>
+        <div class="input-group">
+            <span class="input-group-addon">密码</span>
+            <input type="password" class="form-control" placeholder="请输入密码" name='password'>
+        </div>
+        {{/if}}
+
+        {{if level==2}}
+        <div class="input-group">
+            <span class="input-group-addon">权限</span>
+            <select class="form-control type-select">
+              <option value="0">普通用户</option>
+                <option value="1">管理员</option>
+                <option value="2">超级管理员</option>
+                <option value="3">实验室模块</option>
+            </select>
+        </div>
+        {{/if}}
           <div class="input-group">
             <span class="input-group-addon">确认密码</span>
             <input type="password" class="form-control" placeholder="请输入密码" name='agaipassword'>
@@ -130,7 +157,7 @@
         <div class="col-sm-12   project-introduction">
             <div class="panel ">
                 <div class="panel-heading">
-                    <h3 class="panel-title">发表文章</h3>
+                    <h3 class="panel-title">发表文章 <a href="./back.html" class="label label-primary toEdit">管理</a></h3>
                 </div>
                 <div class="panel-body">
                     <h3 class="essay-years">
