--- a/re/header.html
+++ b/re/header.html
@@ -2,7 +2,7 @@
 <div class="jumbotron">
     <div class="container">
         <div class="col-md-2 logo">
-            <img src=__relative("/pics/logo.jpg") height="130">
+            <img src="pics/logo.jpg" height="130">
         </div>
         <div class="col-md-10">
             <p class="chn-title"><b>国家重点研发计划——重要热带病传播相关的入侵媒介及其病原体的生物学特性研究</b></p>
@@ -84,18 +84,45 @@
 
 <script id="signInTpl" type="text/html">
     <div class="modal-body" id='newPlayer'>
+        {{if list!=''}}
         <div class="input-group">
             <span class="input-group-addon">姓名</span>
-            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}>
+            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}  >
         </div>
         <div class="input-group">
             <span class="input-group-addon">帐号</span>
-            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}}>
+            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}}  >
         </div>
         <div class="input-group">
             <span class="input-group-addon">密码</span>
             <input type="password" class="form-control" placeholder="请输入密码" name='password'>
         </div>
+        {{else}}
+         <div class="input-group">
+            <span class="input-group-addon">姓名</span>
+            <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}} disabled>
+        </div>
+        <div class="input-group">
+            <span class="input-group-addon">帐号</span>
+            <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}} disabled>
+        </div>
+        <div class="input-group">
+            <span class="input-group-addon">密码</span>
+            <input type="password" class="form-control" placeholder="请输入密码" name='password'>
+        </div>
+        {{/if}}
+
+        {{if level==2}}
+        <div class="input-group">
+            <span class="input-group-addon">权限</span>
+            <select class="form-control type-select">
+              <option value="0">普通用户</option>
+                <option value="1">管理员</option>
+                <option value="2">超级管理员</option>
+                <option value="3">实验室模块</option>
+            </select>
+        </div>
+        {{/if}}
           <div class="input-group">
             <span class="input-group-addon">确认密码</span>
             <input type="password" class="form-control" placeholder="请输入密码" name='agaipassword'>
