修复密码修改账户管理问题，更新打包

--- a/front/essay.html
+++ b/front/essay.html
@@ -33,7 +33,7 @@
                         <li>
                             <em>1.</em>
                             <p class="essay-title">
-                                <a href="">Effects of over-expression of allene oxide cyclase on camptothecin
+                                <a href="http://xueshu.baidu.com/s?wd=paperuri%3A%280086667b7e8e3e3603a4ce646b173c3d%29&filter=sc_long_sign&tn=SE_xueshusource_2kduw22v&sc_vurl=http%3A%2F%2Fwww.paper.edu.cn%2Fhtml%2Freleasepaper%2F2012%2F12%2F1006%2F&ie=utf-8&sc_us=16777638169742348717">Effects of over-expression of allene oxide cyclase on camptothecin
 production by cell cultures of Camptotheca acuminata</a>
                                 <p class="essay-info">
                                     African Journal of Biotechnology 11(24): 535-6541 曹莹
@@ -43,7 +43,7 @@ production by cell cultures of Camptotheca acuminata</a>
                         <li>
                             <em>2.</em>
                             <p class="essay-title">
-                                <a href="">Improved isolation of good-quality total RNA from the optic stalk of Mud crab, Scylla paramamosain</a>
+                                <a href="http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0717-34582012000200005&lng=en&nrm=]&tlng=en">Improved isolation of good-quality total RNA from the optic stalk of Mud crab, Scylla paramamosain</a>
                                 <p class="essay-info">
                                    Electronic Journal of Biotechnology    2012 15(2): 12-13 朱厚泽
                                 </p>
