--- a/front/user.html
+++ b/front/user.html
@@ -23,7 +23,7 @@
         <div class="col-sm-12 project-introduction">
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="panel-title">用户后台管理 <a class="addNew newer" onclick='newer(0)'>新建</a></h3>
+                    <h3 class="panel-title">用户后台管理 <a class="addNew newer" >新建</a></h3>
                 </div>
                 <div class="panel-body" id='userMainTplShell'>
                     <div class="bs-example">
