--- a/re/essay.html
+++ b/re/essay.html
@@ -101,7 +101,7 @@
 
 <script id="signInTpl" type="text/html">
     <div class="modal-body" id='newPlayer'>
-        {{if list!=''}}
+        {{if list==''||level==0}}
         <div class="input-group">
             <span class="input-group-addon">姓名</span>
             <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}}  >
@@ -114,8 +114,16 @@
             <span class="input-group-addon">密码</span>
             <input type="password" class="form-control" placeholder="请输入密码" name='password'>
         </div>
+        <div class="input-group">
+            <span class="input-group-addon">确认密码</span>
+            <input type="password" class="form-control" placeholder="请输入密码" name='agaipassword'>
+        </div>
         {{else}}
-         <div class="input-group">
+        <div class="input-group">
+            <span class="input-group-addon">用户编号</span>
+            <input type="text" class="form-control" placeholder="请输入姓名" name='userId' value={{list.userId}} disabled>
+        </div>
+        <div class="input-group">
             <span class="input-group-addon">姓名</span>
             <input type="text" class="form-control" placeholder="请输入姓名" name='username' value={{list.username}} disabled>
         </div>
@@ -123,9 +131,9 @@
             <span class="input-group-addon">帐号</span>
             <input type="text" class="form-control" placeholder="请输入帐号" name='account'  value={{list.account}} disabled>
         </div>
-        <div class="input-group">
+        <div class="input-group" style="display:none;">
             <span class="input-group-addon">密码</span>
-            <input type="password" class="form-control" placeholder="请输入密码" name='password'>
+            <input type="hidden" class="form-control" placeholder="请输入密码" name='password' value={{list.password}}>
         </div>
         {{/if}}
 
@@ -140,10 +148,7 @@
             </select>
         </div>
         {{/if}}
-          <div class="input-group">
-            <span class="input-group-addon">确认密码</span>
-            <input type="password" class="form-control" placeholder="请输入密码" name='agaipassword'>
-        </div>
+        
     </div>
 </script>
 
@@ -167,7 +172,7 @@
                         <li>
                             <em>1.</em>
                             <p class="essay-title">
-                                <a href="">Effects of over-expression of allene oxide cyclase on camptothecin
+                                <a href="http://xueshu.baidu.com/s?wd=paperuri%3A%280086667b7e8e3e3603a4ce646b173c3d%29&filter=sc_long_sign&tn=SE_xueshusource_2kduw22v&sc_vurl=http%3A%2F%2Fwww.paper.edu.cn%2Fhtml%2Freleasepaper%2F2012%2F12%2F1006%2F&ie=utf-8&sc_us=16777638169742348717">Effects of over-expression of allene oxide cyclase on camptothecin
 production by cell cultures of Camptotheca acuminata</a>
                                 <p class="essay-info">
                                     African Journal of Biotechnology 11(24): 535-6541 曹莹
@@ -177,7 +182,7 @@ production by cell cultures of Camptotheca acuminata</a>
                         <li>
                             <em>2.</em>
                             <p class="essay-title">
-                                <a href="">Improved isolation of good-quality total RNA from the optic stalk of Mud crab, Scylla paramamosain</a>
+                                <a href="http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0717-34582012000200005&lng=en&nrm=]&tlng=en">Improved isolation of good-quality total RNA from the optic stalk of Mud crab, Scylla paramamosain</a>
                                 <p class="essay-info">
                                    Electronic Journal of Biotechnology    2012 15(2): 12-13 朱厚泽
                                 </p>
